<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBg"
    tools:context="kz.ftsystem.yel.fts.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="30sp"
                android:fontFamily="@font/exo_medium"
                android:gravity="center"
                android:text="@string/registration"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/regName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="30sp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/name"
                android:paddingBottom="8sp"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:paddingTop="8sp"
                android:textColor="@color/tvTextColor" />

            <EditText
                android:id="@+id/regSurename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/surname"
                android:paddingBottom="8sp"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:paddingTop="8sp"
                android:textColor="@color/tvTextColor" />

            <EditText
                android:id="@+id/regEMAIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="8sp"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:paddingTop="8sp"
                android:textColor="@color/tvTextColor" />

            <EditText
                android:id="@+id/regTelNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/tel_number"
                android:inputType="phone"
                android:paddingBottom="8sp"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:paddingTop="8sp"
                android:textColor="@color/tvTextColor" />

            <Button
                android:id="@+id/createAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="30sp"
                android:background="@drawable/bg_btn"
                android:onClick="onClick"
                android:text="@string/create_account"
                android:textColor="@color/btnTextColor" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
