<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="kz.ftsystem.yel.fts.CheckoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/coBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_8sp"
                android:layout_marginTop="@dimen/dim_8sp"
                android:layout_marginBottom="@dimen/dim_8sp"
                android:src="@drawable/ic_checkout_button_back"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_by_card"
                style="@style/TextStyle.ActionBar"/>

            </LinearLayout>


        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_10sp"
            android:layout_marginTop="@dimen/dim_10sp"
            android:layout_marginEnd="@dimen/dim_10sp"
            android:layout_marginBottom="@dimen/dim_10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/checkout_description" />

                <View
                    android:id="@+id/view_divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/text_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/checkout_total"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:drawableRight="@drawable/ic_credit_card_black_24dp"
                    android:hint="@string/checkout_card_number"
                    android:inputType="phone"
                    android:padding="16dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_card_date"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:drawableRight="@drawable/ic_date_range_black_24dp"
                        android:hint="@string/checkout_card_date"
                        android:inputType="date"
                        android:padding="16dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edit_card_cvc"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:drawableRight="@drawable/ic_lock_black_24dp"
                        android:hint="@string/checkout_card_cvc"
                        android:inputType="number"
                        android:padding="16dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_card_holder_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:drawableRight="@drawable/ic_person_black_24dp"
                    android:hint="@string/checkout_card_holder"
                    android:inputType="textCapWords"
                    android:padding="16dp"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ui_margin_16dp"
                    android:layout_marginTop="@dimen/ui_margin_16dp"
                    android:layout_marginRight="@dimen/ui_margin_16dp"
                    android:background="@color/colorAccent"
                    android:text="@string/checkout_payment"
                    android:textColor="@android:color/white" />

                <ProgressBar
                    android:id="@+id/progressBarCheckout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:visibility="invisible" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>