<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBg"
    tools:context="kz.ftsystem.yel.fts.AuthenticationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo_main" />

            <EditText
                android:id="@+id/edPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/tel_number"
                android:inputType="phone"
                android:paddingBottom="8sp"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:paddingTop="8sp" />

            <!--</android.support.design.widget.TextInputLayout>-->

            <Button
                android:id="@+id/btnEnter"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginStart="30sp"
                android:background="@drawable/bg_btn"
                android:onClick="onClick"
                android:paddingLeft="40sp"
                android:paddingRight="40sp"
                android:text="@string/enter"
                android:textColor="@color/btnTextColor" />

            <CheckBox
                android:id="@+id/chbAutoEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/sw_remember"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:layout_marginBottom="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginTop="20sp"
                android:background="@color/colorAccent" />

            <Button
                android:id="@+id/btnReg"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginEnd="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginBottom="30sp"
                android:background="@drawable/bg_btn"
                android:onClick="onClick"
                android:paddingLeft="40sp"
                android:paddingRight="40sp"
                android:text="@string/registration"
                android:textColor="@color/btnTextColor" />
        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
