<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="kz.ftsystem.yel.fts.PayByOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/poBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_8sp"
                android:layout_marginTop="@dimen/dim_8sp"
                android:layout_marginBottom="@dimen/dim_8sp"
                android:src="@drawable/ic_checkout_button_back"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle.ActionBar"
                    android:text="@string/pay_by_order"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_description"
            android:layout_marginStart="@dimen/dim_8sp"
            android:layout_marginEnd="@dimen/dim_8sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle.ActionBar"
            android:textColor="@color/transparent_black"
            android:text="@string/pay_by_order_message" />

        <Button
            android:id="@+id/poBtnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/Confirm"
            style="@style/ButtonStyle"/>

        <ProgressBar
            android:id="@+id/poProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:visibility="invisible"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>